# SolanaBlockchainBackend

./: .env  index.html  next.config.js  package-lock.json  package.json  update.sh  vite.config.ts
copy_trading/: Cargo.toml
copy_trading/src/: errors.rs  lib.rs
copy_trading/src/instructions/: trade.rs  trader_management.rs
copy_trading/src/state/: config.rs  trader.rs
copy_trading/tests/: copy_trading.ts
src/: App.tsx  index.css  middleware.ts
src/app/: layout.tsx  page.tsx  providers.tsx
src/cli/: config.ts  index.ts  logger.ts
src/cli/commands/: trade.ts
src/components/: AddWallet.tsx  Breadcrumbs.tsx  BulkWalletAnalysis.tsx  ConnectWallet.tsx  CopyAddress.tsx  CopyTradeConfig.tsx  Dashboard.tsx  Loading.tsx  MEVDashboard.tsx  NFTAccess.tsx  Navbar.tsx  PumpFunBundle.tsx  Sniper.tsx  TelegramCopy.tsx  TokenBundle.tsx  TokenRankings.tsx  TokenSniper.tsx  TrackWallets.tsx  TraderCard.tsx  TraderConfig.tsx  TraderHistory.tsx  TransferFunds.tsx  WalletButton.tsx  WalletSetup.tsx
src/components/trader/: TraderHistory.tsx  TraderHoldings.tsx  TraderRankings.tsx  TraderStats.tsx
src/config/: index.ts
src/contexts/: IntegratedWalletContext.tsx  WalletContext.tsx
src/hooks/: useCopyTrading.ts  useTraderRankings.ts  useWallet.ts
src/lib/: crypto.ts  device.ts  solana.ts  trade-executor.ts  trader-manager.ts  transaction-monitor.ts  wallet-manager.ts
src/lib/config/: ConfigProvider.ts  environment.ts  production.ts
src/lib/db/: CacheFactory.ts  DatabaseFactory.ts  MockCache.ts  MockDatabase.ts  mongodb.ts  redis.ts
src/lib/rpc/: JitoRelay.ts  (+2 more)
(+30 files in other folders)
